--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul>
           <li class="active"><a href="#hero">Inicio</a></li>
           <li><a href="#about">Sobre nosotros</a></li>
-          <li><a href="#menu">Men</a></li>
+          <li><a href="#menu">Menu</a></li>
           <!-- <li><a href="#specials">Especialidades</a></li> -->
           <li><a href="#gallery">Galería</a></li>
           <li><a href="#contact">Contacto</a></li>
