--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     <!-- End Menu Section -->
 
     <!-- ======= Specials Section ======= -->
-     <section id="specials" class="specials">
+    <!--  <section id="specials" class="specials">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -546,7 +546,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Specials Section -->
 
     <!-- ======= Book A Table Section ======= -->
