--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
 
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <!-- <section id="chefs" class="chefs">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -837,7 +837,7 @@
         </div>
 
       </div>
-    </section> 
+    </section>  -->
     <!-- End Chefs Section -->
 
     <!-- ======= Contact Section ======= -->
